--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
           <label for="email">Email:</label>
           <input type="text" id="email" required>
         </div>
+        <div>
+          <label for="number">Number:</label>
+          <input type="text" id="number" required>
+        </div>
         <input class="btn" type="submit" value="Submit">
       </form>
 
-      <ul id="users"></ul>
+       <ul id="users"></ul> 
 
-      <!-- <ul class="items">
-        <li class="item">Item 1</li>
-        <li class="item">Item 2</li>
-        <li class="item">Item 3</li>
-      </ul> -->
     </section>
     
 
